--- a/BaseApparelComingSoonMaster/index.html
+++ b/BaseApparelComingSoonMaster/index.html
@@ -20,12 +20,12 @@
 
   <div class="rectangle" > 
     <div class="innerDiv">
-      <img src="/home/lanre/webDev/BaseApparelComingSoonMaster/images/hero-desktop.jpg" alt="">
+      <img src="images/hero-desktop.jpg" alt="">
     </div>
 
     <div class="innerDivOne">
       <div class="innerDivOneBox"> 
-        <img src="/home/lanre/webDev/BaseApparelComingSoonMaster/images/logo.svg" alt="">
+        <img src="images/logo.svg" alt="">
       </div>
 
       <div class="innerDivOneBoxOne">
@@ -47,7 +47,7 @@
           <form action="#" method="POST">
             <input type="email" placeholder="     Email Address">
             <button type="submit" class="icon" onclick="alert('Hello World!')">
-              <img src="/home/lanre/webDev/BaseApparelComingSoonMaster/images/icon-arrow.svg" alt="">
+              <img src="images/icon-arrow.svg" alt="">
             </button>
           </form>
         </div>
