--- a/BaseApparelComingSoonMaster/index.html
+++ b/BaseApparelComingSoonMaster/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/mainCss.css">
+  <link rel="stylesheet" href="./css/mainCss.css">
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
@@ -20,12 +20,12 @@
 
   <div class="rectangle" > 
     <div class="innerDiv">
-      <img src="images/hero-desktop.jpg" alt="">
+      <img src="./images/hero-desktop.jpg" alt="">
     </div>
 
     <div class="innerDivOne">
       <div class="innerDivOneBox"> 
-        <img src="images/logo.svg" alt="">
+        <img src="./images/logo.svg" alt="">
       </div>
 
       <div class="innerDivOneBoxOne">
@@ -47,7 +47,7 @@
           <form action="#" method="POST">
             <input type="email" placeholder="     Email Address">
             <button type="submit" class="icon" onclick="alert('Hello World!')">
-              <img src="images/icon-arrow.svg" alt="">
+              <img src="./images/icon-arrow.svg" alt="">
             </button>
           </form>
         </div>
