--- a/portFolioProject/portFolio.html
+++ b/portFolioProject/portFolio.html
@@ -9,7 +9,7 @@
                 Olanrewaju Alawode - SoftWare Engineer Portfolio
             </title>
 
-            <link rel="stylesheet" href="/css/portFolio.css">            
+            <link rel="stylesheet" href="./css/portFolio.css">
         </head>
 
         <body>
@@ -33,7 +33,7 @@
                             </td>
     
                             <td>
-                                <img src="/img/rsz_1rsz_dsc09324.png" alt="Olanrewaju Alawode">
+                                <img src="./img/rsz_1rsz_dsc09324.png" alt="Olanrewaju Alawode">
                             </td>
                         </tr>
                     </table>
