--- a/portFolioProject/portFolio.html
+++ b/portFolioProject/portFolio.html
@@ -47,7 +47,7 @@
                             <div class="card">
                                 <div class="verticalCenter">
                                     <h3>Frontend</h3>
-                                    <p>HTML, CSS, React, Vue, Django</p>
+                                    <p>HTML, CSS, React, Vue</p>
                                 </div>
                             </div>
                         </td>
@@ -56,7 +56,7 @@
                             <div class="card">
                                 <div class="verticalCenter">
                                     <h3>Backend</h3>
-                                    <p>MySQL Workbench</p>
+                                    <p>MySQL Workbench, Django</p>
                                 </div>
                             </div>
                         </td>
@@ -112,14 +112,34 @@
                 </div>
             </div>
 
-            <div class="">
-                <input type="text" id="fname" name="firstname" placeholder="name..">
-            </div>
+            <div class="container">
+                 <footer>
+                    <p>
+                        © Olanrewaju Alawode 2021
+                    </p>
+                </footer>
 
-            <footer>
-                <p>
-                    © Olanrewaju Alawode 2021
-                </p>
-            </footer>
+                <div class="semicolon">
+                    <img src="./img/semicolon.png" alt="semicolon">
+                </div>
+                
+                <form action="/">
+                    <input class="fname" type="text" name="name" placeholder="Full name"><br>
+                    <input class="email" type="text" name="name" placeholder="Email"><br>
+                    <input class="number" type="text" name="name" placeholder="Phone number">
+                    <div>
+                        <textarea placeholder="Hello! " rows="4"></textarea>
+                    </div>
+                    <button type="submit" href="#">
+                        <p>
+                            Send
+                        </p>
+                    </button>
+                </form>
+
+                <div class="thanks">
+                    <img src="./img/thanks.png" alt="">
+                </div>
+            </div>
         </body>
     </html>
