--- a/portFolioProject/portFolio.html
+++ b/portFolioProject/portFolio.html
@@ -120,7 +120,7 @@
                 </footer>
 
                 <div class="semicolon">
-                    <img src="./img/semicolon.png" alt="semicolon">
+                    <a href="https://semicolon.africa/"><img src="./img/semicolon.png" alt="semicolon"></a>
                 </div>
                 
                 <form action="/">
@@ -141,5 +141,7 @@
                     <img src="./img/thanks.png" alt="">
                 </div>
             </div>
+
         </body>
+        <script src="./jS/mainJs.js"></script>
     </html>
