--- a/practices/index.html
+++ b/practices/index.html
@@ -151,6 +151,6 @@
                 </small>
             </p>
         </body>
-        <script src="#"></script>
+        <script src="./jS/javaScript.js"></script>
 
     </html>
