--- a/JsClassWork/JsHtml.html
+++ b/JsClassWork/JsHtml.html
@@ -18,6 +18,7 @@
 <!-- <script src="./Q7/JsJs6.js"></script> -->
 <!-- <script src="./Q8/JsJs7.js"></script> -->
 <!-- <script src="./Q9/JsJs8.js"></script> -->
-<script src="./Q10/JsJs9.js"></script>
+<!-- <script src="./Q10/JsJs9.js"></script> -->
+<script src="./Q11/JsJs10.js"></script>
 
 </html>
